--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         $scope.show = function() {
           $scope.sidebar = true;
         };
-        $scope.hide = function() {sssssssssss
+        $scope.hide = function() {
           $scope.sidebar = false;
         };
       });
